tests/qd/errors/error_always_success.qd
fn always_ok(a:i64 -- result:i64)! {
	dup
}

fn main() {
	"Test 1: " .
	42 always_ok if {
		. nl
	} else {
		drop "Failed" . nl
	}

	"Test 2: " .
	0 always_ok if {
		. nl
	} else {
		drop "Failed" . nl
	}

	"Test 3: " .
	-5 always_ok if {
		. nl
	} else {
		drop "Failed" . nl
	}
}
